Fix header allocating some spacing even without actions and increase breakpoint for where the actions collapse.

--- a/client/jetpack-cloud/components/layout/style.scss
+++ b/client/jetpack-cloud/components/layout/style.scss
@@ -71,22 +71,26 @@
 	margin: auto;
 	height: 100%;
 
-
 	> * + * {
 		margin-inline-start: 24px;
 	}
 
-	@include breakpoint-deprecated( "<960px" ) {
+	@include breakpoint-deprecated( "<1280px" ) {
 		flex-wrap: wrap;
 
 		> * {
 			width: 100%;
-			margin-block-end: 16px;
 		}
 
 		> * + * {
 			margin-inline-start: 0;
 		}
+	}
+}
+
+.jetpack-cloud-layout__header.has-actions > .jetpack-cloud-layout__header-main {
+	@include breakpoint-deprecated( "<1280px" ) {
+		margin-block-end: 16px;
 	}
 }
 
